# SMART

./: .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml  start-codex-app-system-proxy-33210.bat  start-codex-app-system-proxy-33210.ps1  start-codex-proxy-33210.bat  updates.md
.codex/environments/: environment.toml
.githooks/: commit-msg  post-commit
.qoder/commands/: run.md
data/kernels/: README.md
doc/: ai_project_analysis.md  cesium_troubleshooting.md  design_continuous_thrust_parameter_optimization_algorithm.md  design_maneuver_pulse_planning_algorithm.md  launch_window_angle_reference.md  launch_window_workflow.md  planning_workflow.md  satellite_trajectory_plan.md  spice_usage.md  五次有限推力变轨序贯优化算法详细设计文档_V1.1.md  五次脉冲点火任务规划算法文档_远地点回归约束_V1.0.md  简化脉冲初始规划算法_V4.2_超同步转移与标准转移.md  简化脉冲规划算法_V4_前三次均匀机动量分配.md  脉冲变轨规划算法_V5.0_改进版_解析远地点求解器.md
doc/geo_inclination_analysis/: geo_inclination_perturbation_analysis.docx  geo_inclination_summary.csv
doc/planning_templates/: findings.md  progress.md  task_plan.md
models/space/: Cubesat_1u.glb
scripts/: __init__.py  cesium_diagnostics.py  diagnose-webengine.ps1  full_orbit_history.csv  init-planning-session.ps1  install-git-hooks.ps1  launch_window_shadow.py  profile_launch_window.py  run.ps1  satellite_dynamics_equation.py  setup.ps1  smoke_pdf_report.py  test.ps1  update_updates_md.py  vendor-cesium.ps1  verify_f5_from_f4.py
src/smart/: __init__.py  (+5 more)
tests/: test_ai_project_analysis.py  test_app_runtime.py  test_cesium_diagnostics.py  test_cesium_mission_view.py  test_common_orbital_tools.py  test_data_visualization.py  test_design_maneuver_strategy.py  test_flight_program.py  test_flight_program_page.py  test_launch_window.py  test_launch_window_page.py  test_launch_window_perf.py  test_llm_client.py  test_logging.py  test_maneuver_page.py  test_orbit_initialization.py  test_orbital_mechanics.py  test_pdf_report_export.py  test_project_workspace.py  test_satellite_dynamics_equation.py  test_sidebar_navigation.py  test_spice_service.py  test_stk_ephemeris.py  test_stk_link.py  test_tracking_arc.py  test_update_updates_md.py
(+175 files in other folders)
